h2 22ta yozuv qushildi

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./stay.css">
 </head>
 <body>
-    
+    <h1 class="imit">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam vero rem illum inventore quaerat eum veniam! Quis, magni voluptatem. Voluptas id fugiat magnam quaerat. Amet commodi fugit earum culpa perspiciatis! Numquam, sunt aperiam.</h1>
 </body>
 </html>
