--- a/index.html
+++ b/index.html
@@ -8,6 +8,110 @@
     <link rel="stylesheet" href="./stay.css">
 </head>
 <body>
-    <h1 class="imit">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam vero rem illum inventore quaerat eum veniam! Quis, magni voluptatem. Voluptas id fugiat magnam quaerat. Amet commodi fugit earum culpa perspiciatis! Numquam, sunt aperiam.</h1>
+    <div class="grid">
+        <div class="item logo">
+            <div class="logos">
+                <div class="logom1">
+                    <img src="./images/image-daniel.jpg" alt="">
+                </div>
+                <div class="logom2">
+                    <p class="daniyel1">Daniel Clifford</p>
+                    <p class="daniyel2">Verified Graduate</p>
+                </div>
+            </div>
+            <p class="invite1">
+                I received a job offer mid-course, and the subjects I learned were current, if not more so,
+                in the company I joined. I honestly feel I got every pennys worth.
+            </p>
+            <p class="invite2">
+                I was an EMT for many years before I joined the bootcamp. Ive been looking to make a
+                transition and have heard some people who had an amazing experience here. I signed up
+                for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
+                The next 12 weeks was the best - and most grueling - time of my life. Since completing
+                the course, Ive successfully switched careers, working as a Software Engineer at a VR startup.
+            </p>
+        </div>
+        <div class="item nav">
+            <div class="navas">
+                <div class="navvaa1">
+                    <img src="./images/image-jonathan.jpg" alt="">
+                </div>
+                <div class="navvaa1">
+                    <p class="wasvery1">Jonathan Walters</p>
+                    <p class="wasvery2">Verified Graduate</p>
+                </div>
+            </div>
+            <p class="andkept1">
+                The team was very supportive and kept me motivated
+            </p>
+            <p class="andkept2">
+                I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
+                for a big company. This was one of the best investments Ive made in myself.
+            </p>
+        </div>
+        <div class="item button">
+            <div class="navas">
+                <div class="buttonns">
+                    <img src="./images/image-jonathan.jpg" alt="">
+                </div>
+                <div class="navvaa1">
+                    <p class="evebutton1">Kira Whittle</p>
+                    <p class="evebutton2">Verified Graduate</p>
+                </div>
+            </div>
+            <p class="buttooon1">
+                Such a life-changing experience. Highly recommended!
+            </p>
+            <p class="buttooon2">
+                Before joining the bootcamp, Ive never written a line of code. I needed some structure from
+                professionals who can help me learn programming step by step. I was encouraged to enroll by a former
+                student of theirs who can only say wonderful things about the program. The entire curriculum and staff
+                did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team
+                project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial
+                could ever have. In fact, Ive often referred to it during interviews as an example of my developent
+                experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers.
+                100% recommend!
+            </p>
+        </div>
+        <div class="item wrap">
+            <div class="navas">
+                <div class="navvaa1">
+                    <img src="./images/image-jeanette.jpg" alt="">
+                </div>
+                <div class="navvaa1">
+                    <p class="wraape1">Jeanette Harmon</p>
+                    <p class="wraape2">Verified Graduate</p>
+                </div>
+            </div>
+            <p class="wrapee1">
+                An overall wonderful and rewarding experience
+            </p>
+            <p class="wrapee2">
+                Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
+                while doing something I love.
+            </p>
+        </div>
+        <div class="item footer">
+            <div class="logos">
+                <div class="logom1">
+                    <img src="./images/image-patrick.jpg" alt="">
+                </div>
+                <div class="logom2">
+                    <p class="daniyel1">Patrick Abrams</p>
+                    <p class="daniyel2">Verified Graduate</p>
+                </div>
+            </div>
+            <p class="invite1">
+                Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
+                learning from their experiences was easy.
+            </p>
+            <p class="invite2">
+                The staff seem genuinely concerned about my progress which I find really refreshing. The program
+                gave me the confidence necessary to be able to go out in the world and present myself as a capable
+                junior developer. The standard is above the rest. You will get the personal attention you need from
+                an incredible community of smart and amazing people.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
